fixed blurry effect on chrome

--- a/client/src/app/scss/warzone.scss
+++ b/client/src/app/scss/warzone.scss
@@ -505,7 +505,7 @@
         // activation AM;
         @include transition(left 0.5s ease-in-out, opacity 0.5s ease-in-out);
         transform: translateZ(0);
-        perspective: 1000; backface-visibility: hidden;
+        backface-visibility: hidden;
         border-radius: get_size(0.2, $coefficient);
         border-width: get_size(0.1, $coefficient);
         border-style: solid;
